# PopHealth-Observatory

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SETUP_GUIDE.md  check_cas.py  environment.yml  github-profile-README.md  index.html  main.py  mkdocs.yml  nhanes_demographics_link_finder.ipynb  nhanes_explorer.py  nhanes_explorer_demo.ipynb  nhanes_url_testing.ipynb  pyproject.toml  pytest.ini  requirements.txt  runtime.txt  setup.py  sitemap.xml  validation_report.csv
.github/: copilot-instructions.md
api/: index.html
apps/: streamlit_app.py
changelog/: index.html
data/: .gitignore  README.md
docs/: api.md  architecture.md  changelog.md  contributing.md  features.md  getting-started.md  index.md  license.md  methodology.md  pesticide_biomonitoring_plan.md  pesticide_reference_curation.md  pre-1.0-checklist.md  pre-commit.md  pyrethroid_3pba_report.qmd  roadmap.md  sciclaw_pophealth_integration_plan.md  setup-guide.md  versioning.md
examples/: demo.py
features/: index.html
getting-started/: index.html
license/: index.html
manifests/: component_files_manifest_2021_2023_all_components_detailed.json
methodology/: index.html
notebooks/: README.md  component_files_manifest_2021_2023_all_components.json  component_files_manifest_2021_2023_all_components_detailed.json  nhanes_demographics_link_finder.ipynb  nhanes_explorer_demo.ipynb  nhanes_url_testing.ipynb  observatory_exploration.ipynb
pesticide_biomonitoring_plan/: index.html
(+118 files in other folders)
