[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pophealth-observatory"
version = "0.1.1"
description = "Open-source population health & nutrition analytics toolkit (NHANES focus)"
readme = "README.md"
authors = [{name="PopHealth Observatory Team"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "requests>=2.25.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "plotly>=5.3.0",
    "ipywidgets>=7.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "build",
    "twine",
    "ruff>=0.4.0",
    "black>=24.3.0",
    "coverage>=7.4.0"
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B"]
ignore = []
fix = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
